--- a/journal/201908.md
+++ b/journal/201908.md
@@ -17,9 +17,9 @@ A blog [post](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape
 
 The first details of the privacy feature that Company 0 have been developing in private were released publicly by @jz on an [episode](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/) of Laura Shin's Unchained Podcast on Aug 27.
 
-On Aug 28 a blog [post](https://blog.decred.org/2019/08/28/Iterating-Privacy/) from @jy-p was published which gives a full account of the approach that Company 0 are taking to privacy, and explains the reasoning for this choice. Only approaches which would allow for pruning of spent transactions were considered, with a preference for less complex solutions that allow the auditability of DCR supply to be maintained. This tweet [thread](https://twitter.com/decredproject/status/1166746979160023046) offers a more concise introduction, and if you would prefer to hear about it in the form of a 1 minute rap, @anshawblack and GhostWridah have got that [covered](https://soundcloud.com/decredindepth/privacy-flow/s-5ifuN).
+On Aug 28 a blog [post](https://blog.decred.org/2019/08/28/Iterating-Privacy/) from @jy-p was published which gives a full account of the approach that Company 0 are taking to privacy, and explains the reasoning for this choice. Only approaches which would allow for pruning of spent transactions were considered, with a preference for less complex solutions that allow the auditability of DCR supply to be maintained. This tweet [thread](https://twitter.com/decredproject/status/1166746979160023046) offers a more concise introduction. @jy-p also recorded an hour-long [episode](https://twitter.com/decredproject/status/1168558002867191808) of Decred in Depth with @anshawblack focusing on privacy, where he discussed topics from evading surveillance capitalism to why different approaches were more or less suited to Decred. @anshawblack and GhostWridah also collaborated on a 1 minute [rap](https://soundcloud.com/decredindepth/privacy-flow/s-5ifuN) about Decred and privacy.
 
-The approach is based on the CoinShuffle++ protocol, integrated into the ticket buying process so that stakeholders can opt in to mix their coins as they buy tickets. The protocol addresses the traceability (who sends to whom) but does not hide amounts. The solution relies on a centralized server to coordinate mixing - information about input addresses and change addresses is leaked to the server but not the other peers in the mix, and output addresses are fully anonymized. As the mixing occurs off chain, no change to the consensus rules was required. As all development to this point has been funded by Company 0, no Politeia proposal for funding was required as well.
+The approach is based on the CoinShuffle++ protocol, integrated into the ticket buying process so that stakeholders can opt in to mix their coins as they buy tickets. Smaller denominations are also available for users who are not staking. The protocol addresses the traceability (who sends to whom) but does not hide amounts. The solution relies on a centralized server to coordinate mixing - information about input addresses and change addresses is leaked to the server but not the other peers in the mix, and output addresses are fully anonymized. As the mixing occurs off chain, no change to the consensus rules was required. As all development to this point has been funded by Company 0, no Politeia proposal for funding was required as well.
 
 The initial release works only for users of the command-line interface dcrwallet. It will take time for mixing to be integrated in Decrediton, and in order for it to be offered to VSP users significant improvements to dcrstakepool are required. Longer term, Confidential Transactions (with Bulletproofs) will be considered. These could be used to hide the amounts, which would enhance privacy and avoid the need for extensive mixing of change from the transactions. This kind of development would require changes to the consensus rules, and so would go through the normal governance process.
 
@@ -27,9 +27,9 @@ The initial release works only for users of the command-line interface dcrwallet
 
 [dcrd](https://github.com/decred/dcrd):
 
-New module named `blockchain/standalone` was [introduced](https://github.com/decred/dcrd/pull/1808), which aims to provide several of the standalone functions currently available in the `blockchain` module. The primary goal of offering these functions via a separate module is to reduce dependencies for client code. It will also be beneficial for applications such as lightweight clients that need to ensure basic security properties hold and calculate appropriate vote subsidies and block explorers. Opportunity was taken to write more robust and performant functions that will replace ones in the `blockchain` module in the next major version. The new module will ship with comprehensive tests, full package documentation, and basic usage examples.
+New module named `blockchain/standalone` was [introduced](https://github.com/decred/dcrd/pull/1808), which aims to provide several of the standalone functions currently available in the `blockchain` module. The primary goal of offering these functions via a separate module is to reduce dependencies for client code. It will also be beneficial for applications such as lightweight clients that need to ensure basic security properties hold and calculate appropriate vote subsidies. The opportunity was taken to write more robust and performant functions that will replace those in the `blockchain` module in the next major version. The new module will ship with comprehensive tests, full package documentation, and basic usage examples.
 
-New major versions of [`blockchain`](https://github.com/decred/dcrd/pull/1823), [`mining`](https://github.com/decred/dcrd/pull/1831), [`connmgr`](https://github.com/decred/dcrd/pull/1833), [`peer`](https://github.com/decred/dcrd/pull/1834) and [`mempool`](https://github.com/decred/dcrd/pull/1835) modules have been introduced to make use of other new major module versions. The main module was also [updated](https://github.com/decred/dcrd/pull/1837) to use them all, which marks the end of module upgrading saga for now. The overall benefit is that it updates dcrd to make use of all the latest code updates and significantly reduces that amount of future churn necessary in certain modules when they require API changes that constitute a major semantic versioning break.
+New major versions of [`blockchain`](https://github.com/decred/dcrd/pull/1823), [`mining`](https://github.com/decred/dcrd/pull/1831), [`connmgr`](https://github.com/decred/dcrd/pull/1833), [`peer`](https://github.com/decred/dcrd/pull/1834) and [`mempool`](https://github.com/decred/dcrd/pull/1835) modules have been introduced to make use of other new major module versions. The main module was also [updated](https://github.com/decred/dcrd/pull/1837) to use them all, which marks the end to the module upgrading saga for now. The overall benefit is that it updates dcrd to make use of all the latest code updates and significantly reduces that amount of future churn necessary in certain modules when they require API changes that constitute a major semantic versioning break.
 
 `gcs` module received multiple [improvements](https://github.com/decred/dcrd/pulls?q=is%3Apr+is%3Aclosed+merged%3A2019-08-01..2019-08-31+gcs) to bring it to the quality level required by consensus code for ultimate inclusion in [header commitments](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Support has been [added](https://github.com/decred/dcrd/pull/1854) for independent false positive rate and Golomb coding bin size. Among other things, this permits more optimal parameters for minimizing the filter size to be specified. This capability will be used in the upcoming version 2 filters that will ultimately be included in header commitments. Start of the v2 dev cycle also marked the start of a [new approach](https://github.com/decred/dcrd/pull/1843) towards handling module versioning between release cycles to reduce the maintenance burden.
 
@@ -65,7 +65,7 @@ Login by username was switched back to email to prevent [targeted locking](https
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
-The large [effort](https://github.com/decred/dcrstakepool/pulls?q=is%3Apr+is%3Aclosed+227) to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool from dcrwallet started in April has finally come to [completion](https://github.com/decred/dcrstakepool/pull/470). This change decreases code complexity and reduces the quantity of RPC calls over the network, which in turn enhances performance and increases security.
+The large [effort](https://github.com/decred/dcrstakepool/pulls?q=is%3Apr+is%3Aclosed+227) to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool from dcrwallet, started in April, has finally come to [completion](https://github.com/decred/dcrstakepool/pull/470). This change decreases code complexity and reduces the quantity of RPC calls over the network, which in turn enhances performance and increases security.
 
 VSP operators gained support for SMTPS to send registration and account recovery emails via encrypted connections (including [self-signed certificates](https://github.com/decred/dcrstakepool/pull/486)), improved [status page](https://github.com/decred/dcrstakepool/pull/484) and better error reporting.
 
@@ -91,7 +91,7 @@ LN faucet gained a form to [pay invoices](https://github.com/decred/lightning-fa
 
 A big change that had been on the Todo list for a long time is [dropping SQLite](https://github.com/decred/dcrdata/pull/1480). This makes the database architecture much simpler, only requiring PostgreSQL, and makes the build cgo-free (pure Go, no C).
 
-A redesign is ramping up, but the backend development is mostly in maintenance mode now. That's mainly to focus on dcrdex. But there is plenty more to do to keep improving, especially with mixed transactions.
+A redesign is ramping up, but the backend development is mostly in maintenance mode now as key contributors shift focus to dcrdex. There is still much room for dcrdata improvement and expansion, especially with mixed transactions.
 
 [docs](https://github.com/decred/dcrdocs): [Added](https://github.com/decred/dcrdocs/pull/968) new page detailing [atomic swaps](https://docs.decred.org/advanced/atomic-swap/), [updated](https://github.com/decred/dcrdocs/pull/979) [hardware wallet](https://docs.decred.org/wallets/hardware-wallets/) support info, minor cleanups.
 
@@ -123,9 +123,9 @@ Following the [events](https://github.com/decredcommunity/events/blob/master/rep
 
 ## Governance
 
-In August the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,278 DCR and spent 8,223 DCR. Using August's daily average DCR/USD rate of $26.23, this is $401K received and $216K spent. As these payments were for work completed in July, it is also informative to consider them in the context of the July average daily rate of $28.97 - in which case the USD spent figure is $238K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
+In August the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,278 DCR and spent 8,223 DCR. Using August's daily average DCR/USD rate of $26.23, this is $401K received and $216K spent. As these payments were for work completed in July, it is also informative to consider them in the context of the July average daily rate of $28.97 - in which case the USD spent figure is $238K. As of Aug 9, Treasury balance is 638K DCR (15.8 million USD at $24.80).
 
-A DEX development [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) from @chappjc and @buck54321 (who work on dcrdata), with support from Company 0, was submitted, and approved with 90% Yes votes. This proposal has an estimated cost of $230,000 to deliver a command-line interface application, which can be extended by future proposals to offer a user interface using the Electron framework.
+A DEX development [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) from @chappjc and @buck54321 (who work on dcrdata), with support from Company 0, was submitted - and approved with 90% Yes votes. This proposal has an estimated cost of $230,000 to deliver a command-line interface application, which can be extended by future proposals to offer a user interface using the Electron framework.
 
 The decredcommunity proposals [repository](https://github.com/decredcommunity/proposals) has an [index](https://github.com/decredcommunity/proposals/blob/master/dex/index.md) of DEX-related material.
 
@@ -133,13 +133,13 @@ The decredcommunity proposals [repository](https://github.com/decredcommunity/pr
 
 Altonomy submitted a proposal to offer $50K each side on 10 pairs, they were actively engaged on Politeia and provided answers to many questions, but on Aug 16 they withdrew their proposal, editing it to say "Sorry, due to our technical capacity, we decided to withdraw this proposal.".
 
-i2 Trading submitted a proposal to offer $50K each side on 6 pairs, they engaged actively on Politeia and in the #proposals channel, answering the majority of questions. In response to concerns about transparency, i2 offered to allow a Decred representative read-only access to their exchange accounts for limited periods of time. i2 made a number of edits to their proposal, to add a note about providing API access, clarify the borrowing need and terms, and then amending their offer to loosen the spreads, reduce the maximum fees per month to $10K/month, and drop the fees from $40K/month to $35K/month.
+i2 Trading submitted a proposal to offer $50K each side on 6 pairs, they engaged actively on Politeia and in the #proposals channel, answering the majority of questions. In response to concerns about transparency, i2 offered to allow a Decred representative read-only access to their exchange accounts for limited periods of time. i2 made a number of edits to their proposal, to add a note about providing API access, clarify the borrowing need and terms, and then amending their offer to loosen the spreads, reduce the maximum trading fees reimbursement to $10K/month, and drop the fees for providing the service from $40K/month to $35K/month.
 
 Grapefruit started with 2 offers in their proposal (both for $30K each side on 4 pairs), one with a tighter spread that would cost $40K/month in fees and one with a looser spread that would cost $28K/month in fees. @grapefruittrading answered questions on Politeia on Aug 8 and 20, ignoring some questions while offering [substantive](https://proposals.decred.org/proposals/4becbe00bd5ae93312426a8cf5eeef78050f5b8b8430b45f3ea54ca89213f82b/comments/6) [replies](https://proposals.decred.org/proposals/4becbe00bd5ae93312426a8cf5eeef78050f5b8b8430b45f3ea54ca89213f82b/comments/5) to others. Before authorizing voting to start, @grapefruittrading edited their proposal to remove the more expensive offer, choosing to run with the less expensive offer as they perceived a demand for that from stakeholders and it was their preferred option anyway.
 
 i2 and Grapefruit authorized voting to begin on their proposals on Aug 27.
 
-Tantra Labs submitted a [proposal](https://proposals.decred.org/proposals/82ce113827140caaaf8b5779ab30402d3ed39f1911fdd2e8fa64cf0dc9e09ecb) on Aug 28 which offered a very different proposition, $30K each side at up to 3% spread on 6 ([or 7](https://proposals.decred.org/proposals/82ce113827140caaaf8b5779ab30402d3ed39f1911fdd2e8fa64cf0dc9e09ecb/comments/8)) pairs, with no fees being charged to the Treasury. Instead, the Treasury would only be charged for the cost of borrowing the inventory and up to $10K/month in trading fees. Tantra offered to allow a read-only access to their exchange accounts to "elected" Decred representatives, so that the promised availability of liquidity can be verified. Tantra also offered a web interface to a set of open source order book transparency tools.
+Tantra Labs submitted a [proposal](https://proposals.decred.org/proposals/82ce113827140caaaf8b5779ab30402d3ed39f1911fdd2e8fa64cf0dc9e09ecb) on Aug 28 which offered a very different proposition, $30K each side at up to 3% spread on 6 ([or 7](https://proposals.decred.org/proposals/82ce113827140caaaf8b5779ab30402d3ed39f1911fdd2e8fa64cf0dc9e09ecb/comments/8)) pairs, with no fee for providing the service being charged to the Treasury. Instead, the Treasury would only be charged for the cost of borrowing the inventory and up to $10K/month in trading fees. Tantra offered to allow a read-only access to their exchange accounts to "elected" Decred representatives, so that the promised availability of liquidity can be verified. Tantra also offered a web interface to a set of open source order book transparency tools.
 
 Much of the discussion of Tantra's proposal concerns whether it is too good to be true, with a number of people expressing their doubts that Tantra could deliver what they propose, and wondering if the low cost comes with hidden downsides. Tantra have been active in #proposals and have answered some of the questions on Politeia. Some members of the community grew impatient waiting for Tantra to authorize the start of voting, illuminating an issue with RFP proposals being slowed down out by late submissions, and highlighting the value of a defined timetable.
 
@@ -149,16 +149,18 @@ Voting commenced for the 3 market maker proposals on Sep 4.
 
 For a more detailed consideration of the market maker proposals and other Politeia activity, check out Politeia Digest [issue 20](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-020.md) (Aug 1-12) and [issue 21](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-021.md) (Aug 13-31). There are also a number of community-produced resources which aim to help people who are new to the idea of market making to understand it, and which make comparisons between the different proposals:
 
-* an index of all notable documents and discussions related to market makers is maintained [here](https://github.com/decredcommunity/proposals/blob/master/market-makers/index.md)
-* [comparison table](https://github.com/decredcommunity/proposals/blob/master/market-makers/comparison.md) which aims to compare the proposals in terms of their offers and costs
+* an index of all notable documents and discussions related to market makers is maintained [here](https://github.com/decredcommunity/proposals/blob/master/market-makers/index.md).
+* [comparison table](https://github.com/decredcommunity/proposals/blob/master/market-makers/comparison.md) which aims to compare the proposals in terms of their offers and costs - maxiumum monthly fees estimated in this table are $17K for Tantra, $53K for i2 and $31K for Grapefruit (for Tantra and i2 maximum trading fees of $10K/month are assumed).
 * @bee has written up a comprehensive [overview](https://github.com/decredcommunity/proposals/blob/master/market-makers/arguments.md) of the discussion in relation to specific questions and arguments, and also a detailed [dissection](https://github.com/xaur/writings/blob/master/20190822-dissection-market-makers-for-decred.md) of the subject, introducing relevant terms and presenting an overview of the key considerations.
 * @exitus has produced a [video overview](https://www.youtube.com/watch?v=BKSMA-eanoY) of the proposals.
 
-Following discussion in the #research channel, @richardred began collecting order book data for a selection of pairs and exchanges in this [repository](https://github.com/RichardRed0x/exchange-data). The objective is to build a better picture of how the order books for DCR and other selected cryptoassets currently look, and an initial report has been prepared ahead of the voting on market maker proposals. This data will also be useful for tracking the order books over time to observe the effect of a market maker, should one be hired. Order book data will likely be added to dcrdata's external data offering at some stage, but the nature of this data is such that it can only be recorded live, the only sources of historical order book data are proprietary and [expensive](https://www.kaiko.com/products/binance-10-order-books).
+Following discussion in the #research channel, @richardred began collecting order book data for a selection of pairs and exchanges in this [repository](https://github.com/RichardRed0x/exchange-data). The objective is to build a better picture of how the order books for DCR and other selected cryptoassets currently look, and an initial report has been prepared ahead of the voting on market maker proposals. This data will also be useful for tracking the order books over time to observe the effect of a market maker, should one be hired. Order book data will likely be added to dcrdata's external data offering at some stage, but the nature of this data is such that it can only be recorded live. The only sources of historical order book data are proprietary and [expensive](https://www.kaiko.com/products/binance-10-order-books).
 
 It is worth mentioning the Decred community proposals [repository](https://github.com/decredcommunity/proposals), where a number of the above resources can be found. This repository was created as a place to collect the information that emerges from discussion and analysis of proposals.
 
-Handling the market maker proposals and RFP process has generated much discussion and insight, and an initial integration of RFP functionality on Politeia is being prepared. There will be a new RFP type proposal which candidate proposals can link to, voting and determining the options/outcome will be controlled through these RFP proposals. Before opening a RFP proposal, an ordinary proposal asking "should we have this RFP" would be submitted and approved - the 2 "RFP proposals" Politeia has seen thus far are of this type. The main point of discussion about the new RFP type proposals is around whether these should be conducted as multiple-choice proposals (where voters can vote for 1-of-N options and one with the most votes wins) or as parallel proposals where tickets can vote yes/no on each proposal and the winner is the one with the highest yes less no votes aggregate score (as the MM RFP is being conducted). Parallel voting on competing proposals seems to be the priority, with multiple-choice voting likely to come later and be used for a different purpose (more like polling).
+Handling the market maker proposals and RFP process has generated much discussion and insight, and an initial integration of RFP functionality on Politeia is being prepared. There will be a new RFP type proposal which candidate proposals can link to, voting and determining the options/outcome will be controlled through these RFP proposals. Before opening a RFP proposal, an ordinary proposal asking "should we have this RFP" would be submitted and approved - the 2 "RFP proposals" Politeia has seen thus far are of this type. 
+
+The main point of discussion about the new RFP proposal type is around whether these should be conducted as multiple-choice proposals (where voters can vote for 1-of-N options and one with the most votes wins) or as parallel proposals where tickets can vote yes/no on each proposal and the winner is the one with the highest yes less no votes aggregate score (as the MM RFP is being conducted). Parallel voting on competing proposals seems to be the priority, with multiple-choice voting likely to come later and be used for a different purpose (more like polling).
 
 A reddit [post](https://www.reddit.com/r/decred/comments/cutc16/decred_events_meetups_in_the_cis_in_20192020/) was submitted for feedback which is intended to serve as a pre-proposal for funding of Decred events and meetups in the Commonwealth of Independent States (CIS) - specifically Russia, Ukraine and Georgia.
 
@@ -251,6 +253,7 @@ Selected articles:
 * Decred's Ambitious Vision for a Truly Decentralized Exchange by Nate Urbas ([cryptolinks.com](https://cryptolinks.com/news/decreds-ambitious-vision-for-a-truly-decentralized-exchange))
 * Decentralized Governance in Action: Decred Debates Market Liquidity by Darren Kleine ([cryptobriefing.com]( https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/))
 * Surveying the Privacy Landscape by @jy-p ([blog.decred.org](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/))
+* Iterating Privacy by @jy-p ([blog.decred.org](https://blog.decred.org/2019/08/28/Iterating-Privacy/))
 * Decred Project Lead Jake Yocom-Piatt: Practice What You Preach by Matt Hussey ([decrypt.co](https://decrypt.co/8801/decred-project-lead-jake-yocom-piatt-interview-profile))
 
 Translations:
@@ -303,10 +306,10 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-* [Open source mentality](https://twitter.com/RichardRed0x/status/1160972879133073409) of "dig in and find something useful to do"
 * [Quote](https://twitter.com/Ammarooni/status/1161707860822302722) from [@zubair](https://twitter.com/generalsaccount)'s talk - "We need to solve for transparency in blockchain governance now, so that we have a mechanism to make decisions two decades from now"
 * Decred privacy [tweetstorm](https://twitter.com/decredproject/status/1166746979160023046)
 * @Checkmate on [privacy](https://twitter.com/_Checkmatey_/status/1167502975276933121)
+* @richardred on Decred's [open source mentality](https://twitter.com/RichardRed0x/status/1160972879133073409) of "dig in and find something useful to do"
 * @DCRtheSoV on [growth of the Politeia](https://twitter.com/DCRtheSOV/status/1165708600410402816) and the role it's playing within the project
 * @DCRtheSoV on [how to stake DCR](https://twitter.com/DCRtheSOV/status/1163514060542894080)
 * @Checkmate on the [Treasury](https://twitter.com/_Checkmatey_/status/1157342578787913733)
@@ -326,13 +329,13 @@ In context of discussing market maker proposals, [CoinMarketBook](https://coinma
 
 ## Relevant External
 
-Blockstream have [announced](https://blockstream.com/2019/08/08/en-mining-launch/) their Bitcoin mining operations (which started in 2017), with sites in Canada (Quebec) and Georgia that host their own machines plus those of their clients. Blockstream also announced a new mining pool, the first production mining pool to use the [BetterHash](https://bitcoinmagazine.com/articles/betterhash-protocol-lets-pool-miners-regain-control-over-their-hash-power) protocol. BetterHash allows individual miners to choose which transactions to include in the blocks they find, which would make it significantly more difficult for mining pool operators to use their pool's hashrate maliciously.
+Blockstream have [announced](https://blockstream.com/2019/08/08/en-mining-launch/) their Bitcoin mining operations (which started in 2017), with sites in Canada (Quebec) and Georgia (USA) that host their own machines plus those of their clients. Blockstream also announced a new mining pool, the first production mining pool to use the [BetterHash](https://bitcoinmagazine.com/articles/betterhash-protocol-lets-pool-miners-regain-control-over-their-hash-power) protocol. BetterHash allows individual miners to choose which transactions to include in the blocks they find, which would make it significantly more difficult for mining pool operators to use their pool's hashrate maliciously.
 
 Braiins have [announced](https://bitcoinmagazine.com/articles/with-stratum-v2-braiins-plans-big-overhaul-in-pooled-bitcoin-mining) that the open source Stratum mining protocol V2 will incorporate similar functionality inspired by BetterHash, allowing pools to be configured such that miners choose transactions and version bits for their proposals directly. 
 
 The Zcash community continues to wrestle with the decision about how to fund development after the founders' reward ceases to channel 20% of block rewards to the ECC, Zcash Foundation and other beneficiaries. There follow some short descriptions of seemingly relevant posts - following this process is quite effortful, so it is possible important items have been missed.
 
-The Zcash Foundation (ZF) has [posted](https://www.zfnd.org/blog/dev-fund-guidance-and-timeline/) to make its position clear, their preferred option is mandatory funding of a dev fund by block reward, with the stipulation that all entities receiving these funds must be not-for-profit. The ECC is presently an ordinary corporation, dedicated to the profit of its shareholders, whose interests could conflict with the health of the network. This is a common theme to much of the discussion, people are not keen on block rewards going to a for-profit company and possibly enriching founders/investors.
+The Zcash Foundation (ZF) has [posted](https://www.zfnd.org/blog/dev-fund-guidance-and-timeline/) to make its position clear, their preferred option is mandatory funding of development through block rewards, with the stipulation that all entities receiving these funds must be not-for-profit. The ECC is presently a for-profit corporation, with a fiduciary duty to look out for the profit of its shareholders, whose interests could conflict with the health of the network. This is a common theme to much of the discussion, people are not keen on block rewards going to a for-profit company and possibly enriching founders/investors.
 
 ZF's less preferred options are opt-in funding by miners (who would choose whether to donate or burn funds, and who to donate them to) and no dev funding. Zcash Foundation has a projected burn rate of $3.7M/year ($2M being wages), and could operate at this level until 2023, after which point it would need alternative funding.
 
@@ -346,9 +349,9 @@ Other proposals include a [grand compromise](https://forum.zcashcommunity.com/t/
 
 James Prestwich has a [proposal](https://twitter.com/_prestwich/status/1165390624171986944) (in a Google Doc) which criticizes the management of ECC and takes exception to the ECC using its funds to conduct marketing campaigns which aim to generate support for its continued funding. This document also highlights the power which ownership of the Zcash trademark affords ECC, and argues that no decision-making process should proceed until that issue is resolved.
 
-Zooko has [posted](https://forum.zcashcommunity.com/t/note-about-trademark-strategy/34807) to address disagreement about how the Zcash trademark should be managed. The trademark is the sole property of ECC, but there has been a long-standing agreement to share control of it with a novel legal agreement which provided a double-veto. ECC has second thoughts about sharing control in a 2-of-2 multisig type arrangement because this is prone to deadlock and inaction. Ultimately the post argues ECC should wait until the decision about funding is made to decide how control of the trademark should be decentralized.
+Zooko has [posted](https://forum.zcashcommunity.com/t/note-about-trademark-strategy/34807) to address disagreement about how the Zcash trademark should be managed. The trademark is the sole property of ECC, but there has been a long-standing agreement to share control of it with a novel legal agreement with Zcash Foundation which would provide a double-veto. ECC has had second thoughts about sharing control in a 2-of-2 multisig type arrangement because this is prone to deadlock and inaction. Ultimately the post argues ECC should wait until the decision about funding is made to decide how control of the trademark should be decentralized. This has not been well received by many community members.
 
-Icon announced a [paper](https://m.icon.foundation/download/Contribution_Proposal_Paper_EN.pdf) about how their Contribution Proposal system will work. Proposals will be submitted on chain (with a security deposit of around $100 minimum), where a majority vote (of "ICONists", but I think this just means people staking ICX - @richardred) will determine whether the proposal is approved to receive funding. Approved proposals are allowed to receive delegation, and in effect the proposal receives a share of available funding determined by the proportion of staked ICX delegated to it. Progress reports will be required for all approved proposals every 30 days, ICX stakeholders read these proposals and can rescind a proposal's approval with a majority vote. It is not clear what the target is for this system to be complete and in production.
+Icon announced a [paper](https://m.icon.foundation/download/Contribution_Proposal_Paper_EN.pdf) about how their Contribution Proposal system will work. Proposals will be submitted on chain (with a security deposit of around $100 minimum), where a majority vote (of "ICONists", people staking ICX) will determine whether the proposal is approved to receive funding. Approved proposals are allowed to receive delegation, and in effect the proposal receives a share of available funding determined by the proportion of staked ICX delegated to it. This is different to how most projects handle funding decisions, with the recipients usually defining and requesting their own budget. Progress reports will be required for all approved proposals every 30 days, ICX stakeholders will read these proposals and can rescind a proposal's approval with a majority vote. It is not clear what the target date is for this system to be complete and in production.
 
 Maker [deployed](https://blog.makerdao.com/an-update-to-maker-governance-polling/) a new [Governance Voting Portal](https://vote.makerdao.com/), the UX has been improved to make voting easier and allow holders of MKR to vote on binding executive decisions (about stability fee) at the same time as voting on governance polls - something which was not previously possible. All of the content associated with governance polls is stored off chain on "any publicly accessible source". A hash of the poll is committed to the blockchain, and participants can check whether the content in the public source has been edited by checking this hash.
 
@@ -358,7 +361,7 @@ Tezos [launched](https://medium.com/@tezosagora/enter-agora-c9e545ce4862) its [A
 
 The Babylon 2.0 proposal is currently in its testing phase, having beaten Babylon 1.0 (a previous version) in [round 1](https://www.tezosagora.org/period/16) (78% to 22%, voter turnout of 49%) and received virtually unanimous support in the [second round](https://www.tezosagora.org/period/17) (voter turnout of 82%, although only 179 of 463 bakers voted). This protocol change makes a number of improvements, adjusts the dynamic quorum rules to cap it, and mints 500 XTZ from inflation so that the developers can buy some drinks.
 
-The Tezos Foundation made a [grant](https://tezos.foundation/news/camlcase-receives-grant-to-develop-decentralized-exchange-protocol-on-tezos) to CamlCase to develop a decentralized exchange protocol, inspired by Uniswap, on the Tezos blockchain. There are no details about the amount of the grant in the announcement.
+The Tezos Foundation made a [grant](https://tezos.foundation/news/camlcase-receives-grant-to-develop-decentralized-exchange-protocol-on-tezos) to CamlCase to develop a decentralized exchange protocol, inspired by Uniswap, on the Tezos blockchain. There are no details about the amount of the grant in the announcement, as is standard for Tezos Foundation reporting.
 
 Steemit [announced](https://www.coindesk.com/steemit-to-automate-development-funding-with-new-dao) a hard fork for Aug 27 to enable a [worker proposal system](https://steemit.com/blocktrades/@blocktrades/proposing-a-worker-proposal-system-for-steem) or DAO to administer funding from block rewards - with the intention of speeding up and decentralizing development. Steem users make stake-weighted votes to prioritize funding requests, the top proposals are funded until the available budget is spent.
 
