Outreach: add privacy blog by Dustorf

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -192,7 +192,7 @@ Twenty-four hours later, the first written news of Decred Privacy was released b
 
 To continue the support of the Privacy release, @anshawblack released [Privacy Flow](https://twitter.com/decredproject/status/1169011789255925762), with GhostWridah, and also a very special Decred in Depth [episode](https://twitter.com/decredproject/status/1168558002867191808) featuring @jy-p just days after the release. In this episode, @jy-p delves deeply into the surveillance economy, why privacy matters, and the current and future states of Decred Privacy.
 
-At the time of publication, the Ditto team continues to work on ways to keep Decred Privacy top of mind, and it seems like a timely issue with [recent news of Google wrongdoing](https://www.ft.com/content/e3e1697e-ce57-11e9-99a4-b5ded7a7fe3f). Additionally, @Dustorf will soon publish a blog entry targeting the less technical crowd.
+At the time of publication, the Ditto team continues to work on ways to keep Decred Privacy top of mind, and it seems like a timely issue with [recent news of Google wrongdoing](https://www.ft.com/content/e3e1697e-ce57-11e9-99a4-b5ded7a7fe3f). Additionally, @Dustorf will [published a blog entry targeting the less technical crowd](https://medium.com/@dlefebvr/decred-privacy-taking-the-long-road-62d218223db6).
 
 Outreach has made a concerted effort to increase engagement on Twitter via quality content and education regarding Decred. This was demonstrated by project impression counts more than doubling from July to over 5.6M. One of the messages that gained the most amount of traction was a 4-part [tweet storm](https://twitter.com/decredproject/status/1156652694502817793) on the announcement of the DEX spec.
 
